--- a/css/main.css
+++ b/css/main.css
@@ -93,6 +93,7 @@ footer{
   }
   nav a{
     margin-right: 0;
+    margin-top: 1em;
 
   }
   nav{
